# ocr

./: .clang-format  .cmake-format.py  .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: cmake.yml
cmake/: FindDeployQt.cmake  SearchTesseract.cmake
src/: CMakeLists.txt  code_highlight.cpp  code_highlight.h  code_highlight.py  delimitedcompleter.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  menulineedit.cpp  ocr_tesseract.cpp  ocr_tesseract.h  py.h  screen_capture.cpp  screen_capture.h
src/common/: CMakeLists.txt  py.cpp  py.h
src/eventobj/: CMakeLists.txt  focus.cpp  focus.h  mouse_clicked.cpp  mouse_clicked.h
src/plugins/: code_highlight.py
src/tesseract/: CMakeLists.txt  ocr_tesseract.cpp  ocr_tesseract.h
src/ui/: CMakeLists.txt  delimitedcompleter.cpp  float_label.cpp  float_label.h  menulineedit.h  screen_capture.cpp
